--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight.csproj
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight.csproj
@@ -73,13 +73,22 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ColorPicker.cs" />
+    <Compile Include="ColorPoint.cs" />
+    <Compile Include="ColorPointVisual.cs" />
+    <Compile Include="ColorToAngleConverter.cs" />
+    <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="HsvColor.cs" />
     <Compile Include="HsvWheel.cs" />
+    <Compile Include="HsvWheelColorPicker.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseDoubleConverter.cs" />
     <Compile Include="RgbColor.cs" />
+    <Compile Include="SaturationAndRadiusToTransformXBridge.cs" />
+    <Compile Include="SaturationToRadiusConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
