--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight.csproj
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight.csproj
@@ -66,6 +66,7 @@
       <HintPath>$(TargetFrameworkDirectory)System.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Net" />
+    <Reference Include="System.Windows.Controls.Toolkit, Version=5.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
@@ -75,9 +76,12 @@
     </Compile>
     <Compile Include="ColorPicker.cs" />
     <Compile Include="ColorPoint.cs" />
+    <Compile Include="ColorPointVisualDragDeltaParameter.cs" />
+    <Compile Include="ColorPointVisualDragStartedParameter.cs" />
     <Compile Include="ColorPointVisual.cs" />
     <Compile Include="ColorToAngleConverter.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
+    <Compile Include="DelegateCommand.cs" />
     <Compile Include="HsvColor.cs" />
     <Compile Include="HsvWheel.cs" />
     <Compile Include="HsvWheelColorPicker.cs" />
@@ -87,8 +91,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseDoubleConverter.cs" />
     <Compile Include="RgbColor.cs" />
-    <Compile Include="SaturationAndRadiusToTransformXBridge.cs" />
+    <Compile Include="ColorAndRadiusToTransformXBridge.cs" />
     <Compile Include="SaturationToRadiusConverter.cs" />
+    <Compile Include="TemplatedParentBridge.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
