--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight.csproj
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight.csproj
@@ -74,6 +74,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ColorHelper.cs" />
     <Compile Include="ColorPicker.cs" />
     <Compile Include="ColorPoint.cs" />
     <Compile Include="ColorPointVisualDragDeltaParameter.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="ColorToAngleConverter.cs" />
     <Compile Include="ColorToBrushConverter.cs" />
     <Compile Include="DelegateCommand.cs" />
+    <Compile Include="HslColor.cs" />
     <Compile Include="HsvColor.cs" />
     <Compile Include="HsvWheel.cs" />
     <Compile Include="HsvWheelColorPicker.cs" />
@@ -90,7 +92,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseDoubleConverter.cs" />
-    <Compile Include="RgbColor.cs" />
     <Compile Include="ColorAndRadiusToTransformXBridge.cs" />
     <Compile Include="SaturationToRadiusConverter.cs" />
     <Compile Include="TemplatedParentBridge.cs" />
