--- a/ColorWheelDemoSilverlight/ColorWheelUwp/ColorWheelUwp.csproj
+++ b/ColorWheelDemoSilverlight/ColorWheelUwp/ColorWheelUwp.csproj
@@ -108,6 +108,7 @@
     <None Include="ColorWheelUwp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Wheel.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
