--- a/ColorWheelDemoSilverlight/ColorWheelUwp/ColorWheelUwp.csproj
+++ b/ColorWheelDemoSilverlight/ColorWheelUwp/ColorWheelUwp.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Wheel.png" />
+    <Content Include="OrginalWheel.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
