--- a/ColorWheelDemoSilverlight/ColorWheelUwp/ColorWheelUwp.csproj
+++ b/ColorWheelDemoSilverlight/ColorWheelUwp/ColorWheelUwp.csproj
@@ -108,6 +108,7 @@
     <None Include="ColorWheelUwp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\600px-Hsl-hsv_models.svg.png" />
     <Content Include="Assets\Wheel.png" />
     <Content Include="OrginalWheel.png" />
     <Content Include="Properties\Default.rd.xml" />
