--- a/ColorWheelDemoSilverlight/ColorWheelUwp/project.json
+++ b/ColorWheelDemoSilverlight/ColorWheelUwp/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Toolkit.Uwp": "1.4.1",
+    "winrtxamltoolkit": "2.3.0",
     "WinRTXamlToolkit.UWP": "2.3.0"
   },
   "frameworks": {
